--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@
 }
 .hero-image{
     background: url('/assets/images/hero.jpg') no-repeat center center;
-    height: 100vh;
+    height: 900px;
     width: 100%;
     opacity: 0.7;
     z-index: 0;
@@ -53,4 +53,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
+}
+
+@media screen and (max-width: 1448px) {
+    .hero-image{
+        background: url('/assets/images/hero_max_width_1440.jpg') no-repeat center center;
+        height: 100vh;
+        width: 100%;
+        opacity: 0.7;
+        z-index: 0;
+        position: absolute;
+    }
 }
