--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,14 +16,14 @@
 <nav>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Mind & Body</a>
+          <a class="navbar-brand" href="/index.html">Mind & Body</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/templates/about.html">About</a>
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="/templates/classes.html">Classes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/templates/contact.html">Contact</a>
+                <a class="nav-link active" aria-current="page" href="#">Contact</a>
               </li>
             </ul>
           </div>
@@ -48,7 +48,7 @@
                 <h2>MIND AND BODY
                     YOGA STUDIO</h2>
                 <h2>In the heart of Stockholm you will experience peace of mind and body</h2>
-                <a role="button" class="btn btn-outline-light" href="/templates/classes.html">See Our Classes</button>
+                <a role="button" class="btn btn-outline-light" href="#">See Our Classes</button>
             </div>
         </div>
     </section>
