Add classes section in home page

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="/templates/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Classes</a>
+                <a class="nav-link active" aria-current="page" href="/templates/classes.html">Classes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/templates/contact.html">Contact</a>
@@ -48,7 +48,7 @@
                 <h2>MIND AND BODY
                     YOGA STUDIO</h2>
                 <h2>In the heart of Stockholm you will experience peace of mind and body</h2>
-                <a role="button" class="btn btn-outline-light" href="#">See Our Classes</button>
+                <a role="button" class="btn btn-outline-light" href="#">See Our Classes</a>
             </div>
         </div>
     </section>
