--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,13 @@
 * {
     font-family: 'Playfair Display', serif;
     box-sizing: border-box;
-    margin: 0;
     padding: 0;
+    margin: 0;
+    border: none;
 }
+body{
 
+}
 .navbar {
     width: 100%;
     position: absolute;
@@ -35,6 +38,7 @@
 }
 .hero-section{
     width: 100%;
+    height: 900px;
 }
 .hero-image{
     background: url('/assets/images/hero.jpg') no-repeat center center;
@@ -53,6 +57,49 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
+}
+
+footer {
+    min-height: 100px;
+    border: 3px solid pink;
+    width: 100%;
+}
+
+/* home classes */  
+.home-title {
+    text-align: center;
+    position: relative;
+    top: 3vh;
+}
+
+.classes-section{
+   
+}
+
+.home-classes-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 450px;
+}
+
+.home-classes {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30vw;
+}
+.home-classes p {
+    margin-bottom: 0px;
+}
+
+.classes-link{
+    text-decoration: none;
+    color: lightcoral;
+    font-size: 20px;
+    font-weight: 700;
 }
 
 @media screen and (max-width: 1448px) {
