--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="/index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
+                <a class="nav-link active" aria-current="page" href="/templates/about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/templates/classes.html">Classes</a>
@@ -48,7 +48,7 @@
                 <h2>MIND AND BODY
                     YOGA STUDIO</h2>
                 <h2>In the heart of Stockholm you will experience peace of mind and body</h2>
-                <a role="button" class="btn btn-outline-light" href="#">See Our Classes</button>
+                <a role="button" class="btn btn-outline-light" href="#">See Our Classes</a>
             </div>
         </div>
     </section>
