--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&display=swap');
 
 * {
     font-family: 'Playfair Display', serif;
@@ -8,14 +7,15 @@
     margin: 0;
     border: none;
 }
-body{
 
-}
+body {}
+
 .navbar {
     width: 100%;
     position: absolute;
     z-index: 1;
 }
+
 .navbar-brand {
     color: #fff;
     font-size: 30px;
@@ -23,24 +23,27 @@ body{
     left: 20px;
 }
 
-.navbar-nav{
+.navbar-nav {
     position: absolute;
     right: 20px;
 }
 
-.nav-link{
+.nav-link {
     color: #fff;
     font-size: 20px;
 }
+
 .active {
     text-decoration: underline;
-    color: #fff!important;
+    color: #fff !important;
 }
-.hero-section{
+
+.hero-section {
     width: 100%;
     height: 900px;
 }
-.hero-image{
+
+.hero-image {
     background: url('/assets/images/hero.jpg') no-repeat center center;
     height: 900px;
     width: 100%;
@@ -65,16 +68,14 @@ footer {
     width: 100%;
 }
 
-/* home classes */  
+/* home classes */
 .home-title {
     text-align: center;
     position: relative;
     top: 3vh;
 }
 
-.classes-section{
-   
-}
+.classes-section {}
 
 .home-classes-container {
     display: flex;
@@ -87,28 +88,117 @@ footer {
 .home-classes {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 30vw;
+    height: 250px;
 }
+
 .home-classes p {
     margin-bottom: 0px;
 }
 
-.classes-link{
+.classes-link {
     text-decoration: none;
     color: lightcoral;
     font-size: 20px;
     font-weight: 700;
 }
 
+/* Yoga trainer sections */
+.trainer-section {
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.text-muted{
+    text-align: center;
+    font-size: 20px;
+}
+
+.trainer-title {
+    top: 0px;
+}
+
+.trainer-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: baseline; 
+}
+
+.trainer {
+    width: 20vw;
+    text-align: center;
+}
+
+.trainer-contact{
+
+}
+
+.trainer-image-1 {
+    background: url('/assets/images/trainer-images/susan_miranda.jpg') no-repeat center center;
+}
+
+.trainer-image-2 {
+    background: url('/assets/images/trainer-images/jane_johnson.jpg') no-repeat center center;
+}
+
+.trainer-image-3 {
+    background: url('/assets/images/trainer-images/anna_alfred.jpg') no-repeat center center;
+}
+
+.trainer-image-4 {
+    background: url('/assets/images/trainer-images/maria_ericson.jpg') no-repeat center center;
+}
+.trainer-image{
+    width: 21vw;
+    height: 400px;
+    border-radius: 4px;
+}
+
+
 @media screen and (max-width: 1448px) {
-    .hero-image{
+    .hero-image {
         background: url('/assets/images/hero_max_width_1440.jpg') no-repeat center center;
         height: 100vh;
         width: 100%;
         opacity: 0.7;
         z-index: 0;
         position: absolute;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    p{
+        font-size: 13px;
+    }
+
+    .trainer-section {
+        justify-content: unset;
+    }
+    .trainer-image-1 {
+        background: url('/assets/images/trainer-images/susan_miranda_max_width_1024.jpg') no-repeat center center;
+
+    }
+    .trainer-image-2 {
+        background: url('/assets/images/trainer-images/jane_johnson_max_width_1024.jpg') no-repeat center center;
+
+    }
+    .trainer-image-3 {
+        background: url('/assets/images/trainer-images/anna_alfred_max_width_1024.jpg') no-repeat center center;
+
+    }
+    .trainer-image-4 {
+        background: url('/assets/images/trainer-images/maria_ericson_max-width_1024.jpg') no-repeat center center;
+
+    }
+    .trainer-image{
+        width: 21vw;
+        height: 283px;
+        border-radius: 4px;
     }
 }
