--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ footer {
     justify-content: space-between;
 }
 
-.text-muted{
+.text-muted {
     text-align: center;
     font-size: 20px;
 }
@@ -127,7 +127,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: baseline; 
+    align-items: baseline;
 }
 
 .trainer {
@@ -135,9 +135,15 @@ footer {
     text-align: center;
 }
 
-.trainer-contact{
-
+.trainer-group {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    width: 100%;
+    justify-content: space-around;
 }
+
+.trainer-contact {}
 
 .trainer-image-1 {
     background: url('/assets/images/trainer-images/susan_miranda.jpg') no-repeat center center;
@@ -154,7 +160,8 @@ footer {
 .trainer-image-4 {
     background: url('/assets/images/trainer-images/maria_ericson.jpg') no-repeat center center;
 }
-.trainer-image{
+
+.trainer-image {
     width: 21vw;
     height: 400px;
     border-radius: 4px;
@@ -172,33 +179,45 @@ footer {
     }
 }
 
-@media screen and (max-width: 1024px){
-    p{
+@media screen and (max-width: 1024px) {
+    p {
         font-size: 13px;
     }
 
     .trainer-section {
         justify-content: unset;
     }
+
     .trainer-image-1 {
         background: url('/assets/images/trainer-images/susan_miranda_max_width_1024.jpg') no-repeat center center;
 
     }
+
     .trainer-image-2 {
         background: url('/assets/images/trainer-images/jane_johnson_max_width_1024.jpg') no-repeat center center;
 
     }
+
     .trainer-image-3 {
         background: url('/assets/images/trainer-images/anna_alfred_max_width_1024.jpg') no-repeat center center;
 
     }
+
     .trainer-image-4 {
         background: url('/assets/images/trainer-images/maria_ericson_max-width_1024.jpg') no-repeat center center;
 
     }
-    .trainer-image{
+
+    .trainer-image {
         width: 21vw;
         height: 283px;
         border-radius: 4px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .trainer {
+        flex-direction: column;
+        align-items: center;
     }
 }
