--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ footer {
 
 /* Yoga trainer sections */
 .trainer-section {
-    height: 700px;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -176,13 +176,11 @@ footer {
 height: 500px;
 }
 .newsletter-text {
-    position: relative;
-    left: 40%;
-    width: 900px;
-    bottom: 50%;
-    transform: translate(-35%, -35%);
-    text-align: center;
-    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
 }
 
 .background-image{
@@ -284,6 +282,12 @@ height: 500px;
         height: 400px;
         border-radius: 4px;
     }
+    /* newsletter section */
+
+    .newsletter-input{
+        height: 55px;
+        width: 300px;
+    }
 }
 
 @media screen and (max-width: 425px) {
@@ -348,4 +352,33 @@ height: 500px;
         margin: 0px;
     }
 
+    /* newsletter section */
+
+    .newsletter-input{
+        height: 45px;
+        width: 250px;
+    }
+    .subscribe-button{
+        padding: 10px;
+    }
+
+}
+
+@media screen and (max-width: 375px) {
+    .newsletter-section{
+        height: 300px;
+    }
+    .background-image{
+        height: 300px;
+    }
+    .newsletter-text{
+        height: 300px;
+    }
+    .newsletter-input{
+        height: 45px;
+        width: 200px;
+    }
+    .subscribe-button{
+        padding: 10px;
+    }
 }
