--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ body {}
 }
 
 .hero-image {
-    background: url('/assets/images/hero.jpg') no-repeat center center;
+    background: url('assets/images/hero.jpg') no-repeat center center;
     height: 900px;
     width: 100%;
     opacity: 0.7;
@@ -147,19 +147,19 @@ footer {
 .trainer-contact {}
 
 .trainer-image-1 {
-    background: url('/assets/images/trainer-images/susan_miranda.jpg') no-repeat center center;
+    background: url('assets/images/trainer-images/susan_miranda.jpg') no-repeat center center;
 }
 
 .trainer-image-2 {
-    background: url('/assets/images/trainer-images/jane_johnson.jpg') no-repeat center center;
+    background: url('assets/images/trainer-images/jane_johnson.jpg') no-repeat center center;
 }
 
 .trainer-image-3 {
-    background: url('/assets/images/trainer-images/anna_alfred.jpg') no-repeat center center;
+    background: url('assets/images/trainer-images/anna_alfred.jpg') no-repeat center center;
 }
 
 .trainer-image-4 {
-    background: url('/assets/images/trainer-images/maria_ericson.jpg') no-repeat center center;
+    background: url('assets/images/trainer-images/maria_ericson.jpg') no-repeat center center;
 }
 
 .trainer-image {
@@ -184,7 +184,7 @@ height: 500px;
 }
 
 .background-image{
-    background: url('/assets/images/newsletter_background.jpg') no-repeat center center;
+    background: url('assets/images/newsletter_background.jpg') no-repeat center center;
     height: 500px;
 }
 .newsletter-input{
@@ -204,7 +204,7 @@ height: 500px;
 
 @media screen and (max-width: 1448px) {
     .hero-image {
-        background: url('/assets/images/hero_max_width_1440.jpg') no-repeat center center;
+        background: url('assets/images/hero_max_width_1440.jpg') no-repeat center center;
         height: 100vh;
         width: 100%;
         opacity: 0.7;
@@ -223,22 +223,22 @@ height: 500px;
     }
 
     .trainer-image-1 {
-        background: url('/assets/images/trainer-images/susan_miranda_max_width_1024.jpg') no-repeat center center;
+        background: url('assets/images/trainer-images/susan_miranda_max_width_1024.jpg') no-repeat center center;
 
     }
 
     .trainer-image-2 {
-        background: url('/assets/images/trainer-images/jane_johnson_max_width_1024.jpg') no-repeat center center;
+        background: url('assets/images/trainer-images/jane_johnson_max_width_1024.jpg') no-repeat center center;
 
     }
 
     .trainer-image-3 {
-        background: url('/assets/images/trainer-images/anna_alfred_max_width_1024.jpg') no-repeat center center;
+        background: url('assets/images/trainer-images/anna_alfred_max_width_1024.jpg') no-repeat center center;
 
     }
 
     .trainer-image-4 {
-        background: url('/assets/images/trainer-images/maria_ericson_max-width_1024.jpg') no-repeat center center;
+        background: url('assets/images/trainer-images/maria_ericson_max-width_1024.jpg') no-repeat center center;
 
     }
 
@@ -262,19 +262,19 @@ height: 500px;
         width: 40vw;
     }
     .trainer-image-1 {
-        background: url('/assets/images/trainer-images/susan_miranda.jpg') no-repeat center center;
+        background: url('assets/images/trainer-images/susan_miranda.jpg') no-repeat center center;
     }
     
     .trainer-image-2 {
-        background: url('/assets/images/trainer-images/jane_johnson.jpg') no-repeat center center;
+        background: url('assets/images/trainer-images/jane_johnson.jpg') no-repeat center center;
     }
     
     .trainer-image-3 {
-        background: url('/assets/images/trainer-images/anna_alfred.jpg') no-repeat center center;
+        background: url('assets/images/trainer-images/anna_alfred.jpg') no-repeat center center;
     }
     
     .trainer-image-4 {
-        background: url('/assets/images/trainer-images/maria_ericson.jpg') no-repeat center center;
+        background: url('assets/images/trainer-images/maria_ericson.jpg') no-repeat center center;
     }
     
     .trainer-image {
