--- a/templates/contact.html
+++ b/templates/contact.html
@@ -52,7 +52,28 @@
             </div>
         </div>
     </section>
-
+<section>
+  <div class="trainer-contact-container">
+    <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+    </p>
+    <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+  </div>
+  <div class="trainer-contact-container">
+    <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+    </p>
+    <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+  </div>
+  <div class="trainer-contact-container">
+    <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+    </p>
+    <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+  </div>
+  <div class="trainer-contact-container">
+    <p class="trainer-contact"><i class="fa-solid fa-phone-flip"></i> Phone: (+46) 71 234 5678
+    </p>
+    <p class="trainer-contact"><i class="fa-solid fa-envelope"></i> Mail: Name@email.com</p>
+  </div>
+</section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
