--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ body {}
 }
 
 .hero-image {
-    background: url('/assets/images/hero.jpg') no-repeat center center;
+    background: url('../images/hero.jpg') no-repeat center center;
     height: 900px;
     width: 100%;
     opacity: 0.7;
